# webrtc-native-samples

./: CMakeLists.txt
src/private_codec/: Makefile  c_encoder_interface.h  c_encoder_nv_impl.cpp  c_encoder_nv_impl.h  h264_encoder_adaptor.cpp  h264_encoder_adaptor.h  test_nv_encoder.cpp
src/video-channel/: i420_creator.cpp  i420_creator.h  main.cpp
